# bunnyburrow-watch2gether-backend

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  package.yml
docs/: doc.md  websockets.md
tests/: README.md  test_convert.py  test_download.py  test_streaming.py  test_websocket.py  test_websockets.py
tests/assets/: 我们亲爱的Steve.mkv
watch2gether/: __init__.py  cli.py  command_wrapper.py  experimental_cli.py  experimental_command_wrapper.py  logger.py
watch2gether/core/: __init__.py  convert.py  download.py  networking.py  service.py  streaming.py  websocket.py
watch2gether/core/websockets/: __init__.py  connection_manager.py  websocket.py
watch2gether/experimental/: logger.py
watch2gether/experimental/core/: streaming.py
watch2gether/experimental/core/websockets/: __init__.py  connection_manager.py  websocket.py
