[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "watch2gether"
version = "0.1b3"
dependencies = [
    "fastapi>=0.115.7, <=0.116.1",
    "m3u8==6.0.0",
    "uvicorn>=0.34.1, <=0.35.0",
    "websockets>=14.2, <=15.0.1"
]
authors = [
    { name="Steve R. Sun", email="s1638650145@gmail.com" }
]
description = "一起看电影"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]
license = "GPL-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/sun1638650145/bunnyburrow/"

[project.scripts]
w2g-cli = "watch2gether.cli:run"

[tool.ruff]
# 设置每个缩进层级使用4个空格数.
indent-width = 4
# 设置每行代码最大行长度不超过79个字符.
line-length = 79

[tool.ruff.lint]
# 启用E类规则.
select = ["E"]

[tool.ruff.lint.per-file-ignores]
# 禁用`*/__init__.py`的imported but unused.
"*/__init__.py" = ["F401"]
# 禁用`watch2gether/__init__.py`的Module level import not at top of file.
"watch2gether/__init__.py" = ["E402"]
