[build-system]
requires = ["hatchling >= 1.27"]
build-backend = "hatchling.build"

[project]
name = "watch2gether"
version = "0.1b4"
dependencies = [
    "cryptography==46.0.5",
    "fastapi>=0.121.1, <=0.133.0",
    "m3u8==6.0.0",
    "uvicorn>=0.38.0, <=0.41.0",
    "websockets>=15.0.1, <=16.0"
]
authors = [
    { name="Steve R. Sun", email="s1638650145@gmail.com" }
]
description = "一起看电影"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]
license = "GPL-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/sun1638650145/bunnyburrow/"

[project.scripts]
w2g-cli = "watch2gether.cli:run"

[tool.ruff]
# 设置每个缩进层级使用4个空格.
indent-width = 4
# 设置每行代码最大行长度不超过79个字符.
line-length = 79

[tool.ruff.lint]
# 启用E, F类规则.
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
# 禁用`*/__init__.py`的imported but unused.
"*/__init__.py" = ["F401"]
# 禁用`watch2gether/__init__.py`的Module level import not at top of file.
"watch2gether/__init__.py" = ["E402"]
